@@ -112,7 +112,7 @@ public class TownyBlockListener implements Listener {
 			return;
 		}
 
-		if (testBlockMove(event.getBlock(), event.getDirection()))
+		if (testBlockMove(event.getBlock(), event.isSticky() ? event.getDirection().getOppositeFace() : event.getDirection()))
 			event.setCancelled(true);
 
 		List<Block> blocks = event.getBlocks();
@@ -163,11 +163,16 @@ public class TownyBlockListener implements Listener {
 		Location locTo = blockTo.getLocation();
 		TownBlock currentTownBlock = null, destinationTownBlock = null;
 
+		System.out.println("blockTo: " + blockTo.getLocation());
+		System.out.println("loc: " + loc);
+		System.out.println("locTo: " + locTo);
 		currentTownBlock = TownyAPI.getInstance().getTownBlock(loc);
 		destinationTownBlock = TownyAPI.getInstance().getTownBlock(locTo);
+		System.out.println("Curr TB: " + currentTownBlock.getCoord());
+		System.out.println("Dest TB: " + destinationTownBlock.getCoord());
 
 		if (currentTownBlock != destinationTownBlock) {
-			
+			System.out.println("no Match!");
 			// Cancel if either is not null, but other is (wild to town).
 			if (((currentTownBlock == null) && (destinationTownBlock != null)) || ((currentTownBlock != null) && (destinationTownBlock == null))) {
 				return true;
